--- a/projetofinal/pom.xml
+++ b/projetofinal/pom.xml
@@ -16,7 +16,7 @@
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
-
+ 
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -56,8 +56,14 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.19</version>
 		</dependency>
+		<!-- Miss dependency ?! -->
+		<!-- <dependency>
+			<groupId>io.grpc</groupId>
+			<artifactId>grpc-protobuf</artifactId>
+			<version>1.16.1</version>
+		</dependency> -->
 	</dependencies>
-
+ 
 	<build>
 		<plugins>
 			<plugin>
