--- a/projetofinal/docker-compose.yml
+++ b/projetofinal/docker-compose.yml
@@ -3,7 +3,8 @@ services:
   db:
     image: mysql:latest #5.7
     volumes: 
-      - ./db/:/var/lib/mysql
+      - ./.docker/mysql/data:/var/lib/mysql
+      - ./dump:/docker-entrypoint-initdb.d
     restart: always
     command: --default-authentication-plugin=mysql_native_password    
     environment:
