--- a/projetofinal/docker-compose.yml
+++ b/projetofinal/docker-compose.yml
@@ -19,3 +19,13 @@ services:
       - 8081:8080
     depends_on: 
       - db
+
+  app:
+    image: openjdk:8-jdk-alpine
+    ports:
+    - "8080:8080"
+    restart: always
+    volumes:
+    - .:/app
+    working_dir: /app
+    command: ./mvnw clean compile spring-boot:run 
