--- a/projetofinal/docker-compose.yml
+++ b/projetofinal/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       MYSQL_DATABASE: "projetofinaldb"
     ports:
       - "3306:3306"
+
   adminer:
     image: adminer
     restart: always
@@ -28,4 +29,9 @@ services:
     volumes:
     - .:/app
     working_dir: /app
-    command: ./mvnw clean compile spring-boot:run 
+    command: ./mvnw spring-boot:run 
+    depends_on:
+      - db
+    # network_mode: bridge
+    # external_links:
+    #   - db:db
